fixed spacing

--- a/src/components/Timer/Timer.css
+++ b/src/components/Timer/Timer.css
@@ -2,6 +2,7 @@
   background: var(--theme-color1);
   margin-top: 5px;
   padding: 5px 10px;
+  box-shadow: inset 0 0 4px black;
 }
 
 .Timer__info-container {
